cluster/apps/media/nzbget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  externalName: nuc0.home
  ports:
    - name: http
      port: 6789
      protocol: TCP
      targetPort: 6789
  sessionAffinity: None
  type: ExternalName
